<resources>
    <string name="app_name">The Movie</string>

    <!-- Transition -->
    <string name="transition_name">selectedItem</string>
    <string name="transition_poster">selectedPoster</string>
    <string name="transition_cast">selectCrew</string>

    <!-- Home Fragment -->
    <string name="home_title_1">Popular Movies</string>
    <string name="home_title_2">Upcoming Movies</string>
    <string name="home_title_3">Genres</string>
    <string name="home_title_4">Discover Tv Shows</string>
    <string name="home_title_5">Discover Movies</string>

    <!-- Main Activity -->
    <string name="title_main_1">Now Trending on TV</string>
    <string name="title_main_2">Upcoming Movies</string>
    <string name="title_main_3">Discover Tv</string>
    <string name="title_main_4">Discover Movies</string>
    <string name="title_main_5">See All</string>
    <string name="title_main_6">Search Movies</string>
    <string name="title_activity_detail_movie">DetailMovieActivity</string>

    <!-- Discover Header Menu -->
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Detail Activity -->
    <string name="fragment_title_1">Detail</string>

    <string name="detail_title_1">Movie Detail</string>
    <string name="detail_title_2">Popularity</string>
    <string name="detail_title_3">Date Release</string>
    <string name="detail_title_4">Overview</string>
    <string name="detail_title_5">Status</string>
    <string name="detail_title_6">Genre</string>
    <string name="detail_title_7">Cast and Crew</string>
    <string name="detail_title_8">Recommendation Movies</string>
    <string name="detail_title_9">No Recommended Movie</string>
    <string name="detail_title_10">Movie Reviews</string>
    <string name="detail_title_11">No internet connection found.\nCheck your internet connection or try again.</string>
    <string name="detail_title_12">Retry</string>
    <string name="detail_title_13">No Movie Review</string>
    <string name="detail_title_14">Total Episodes</string>
    <string name="detail_title_15">Total Seasons</string>
    <string name="detail_title_16">Seasons</string>
    <string name="detail_title_17">No Cast Available</string>
    <string name="detail_title_18">Videos</string>
    <string name="detail_title_19">No Video Available</string>

    <!-- Person Activity -->
    <string name="person_title_1">Born :</string>
    <string name="person_title_2">Filmography</string>
    <string name="person_title_3">No Filmography</string>
    <string name="person_title_4">Photos</string>
    <string name="person_title_5">No Person Photo</string>

    <!-- Discover Movie -->
    <string name="movie_title_1">Release date :</string>
    <string name="movie_title_2">Connection Error\nTap to retry.</string>

    <string name="search_box">Search</string>
    <string name="suggest_search_1">Please fill the search field</string>

    <string name="tv_rating">Rating :</string>

</resources>
