<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.person.PersonFragment">

    <data>
        <variable
                name="cast"
                type="com.themovie.datasource.entities.ui.Artist" />
        <variable
                name="vm"
                type="com.themovie.tmdb.ui.person.PersonViewModel" />
        <import type="android.view.View"/>
        <import type="com.themovie.datasource.repository.remote.ApiUrl"/>
        <import type="androidx.recyclerview.widget.RecyclerView"/>
    </data>

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.themovie.tmdb.helper.customview.HeaderView
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <LinearLayout
                    android:id="@+id/person_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="@{vm.loading ? View.INVISIBLE : View.VISIBLE}"
                    android:layout_below="@id/header">

                <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_space"
                        app:cardBackgroundColor="@color/colorPrimary">

                    <LinearLayout
                            android:id="@+id/per_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="@dimen/small_space"
                            android:layout_marginBottom="10dp">

                        <TextView
                                android:text="@{cast.name}"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:textSize="20sp"
                                android:textColor="@color/colorAccent"/>

                        <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginTop="@dimen/small_space"
                                android:layout_marginBottom="@dimen/small_space"
                                android:background="@color/colorBlue"/>

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                            <ImageView
                                    android:layout_width="120dp"
                                    android:layout_height="180dp"
                                    android:layout_marginEnd="@dimen/small_space"
                                    android:transitionName="@string/transition_cast"
                                    android:scaleType="centerCrop"
                                    app:loadImage="@{ApiUrl.IMG_POSTER + cast.profilePath}"
                                    tools:ignore="ContentDescription" />

                            <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                <TextView
                                        android:text="@{cast.biography}"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:maxLines="6"
                                        android:textColor="@color/colorWhite"
                                        android:layout_marginBottom="20dp"/>

                                <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:textColor="@color/colorWhite"
                                        app:birthDate="@{cast.birthday}"
                                        app:birthPlace="@{cast.placeOfBirth}"/>

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_space"
                        app:cardBackgroundColor="@color/colorPrimary">

                    <LinearLayout
                            android:id="@+id/per_film_img"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                        <TextView
                                android:text="@string/person_title_4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:textSize="16sp"
                                android:textColor="@color/colorAccent"
                                android:layout_marginStart="@dimen/small_space"
                                android:layout_marginEnd="@dimen/small_space"
                                android:layout_marginTop="@dimen/small_space"/>

                        <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_margin="@dimen/small_space"
                                android:background="@color/colorBlue"/>

                        <TextView
                                android:id="@+id/cast_img_empty"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/person_title_5"
                                android:textSize="20sp"
                                android:textAlignment="center"
                                android:visibility="gone"
                                android:layout_marginBottom="20dp"
                                android:textColor="@color/colorWhite"/>

                        <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/cast_photos"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/extra_small_space"
                                android:orientation="horizontal"
                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                                app:setItemSpacing="@{@dimen/extra_small_space}"
                                app:firstItemSpacing="@{true}"
                                app:setOrientation="@{RecyclerView.HORIZONTAL}">

                        </androidx.recyclerview.widget.RecyclerView>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_space"
                        app:cardBackgroundColor="@color/colorPrimary">

                    <LinearLayout
                            android:id="@+id/per_film_l"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                        <TextView
                                android:text="@string/person_title_2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:textSize="16sp"
                                android:textColor="@color/colorAccent"
                                android:layout_marginTop="@dimen/small_space"
                                android:layout_marginStart="@dimen/small_space"/>

                        <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_margin="@dimen/small_space"
                                android:background="@color/colorBlue"/>

                        <TextView
                                android:id="@+id/cast_empty"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/person_title_3"
                                android:textSize="20sp"
                                android:textAlignment="center"
                                android:visibility="gone"
                                android:layout_marginBottom="20dp"
                                android:textColor="@color/colorWhite"/>

                        <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/cast_film"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/extra_small_space"
                                android:orientation="horizontal"
                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                                app:setItemSpacing="@{@dimen/extra_small_space}"
                                app:firstItemSpacing="@{true}"
                                app:setOrientation="@{RecyclerView.HORIZONTAL}">

                        </androidx.recyclerview.widget.RecyclerView>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <include
                    android:id="@+id/shimmer_person"
                    layout="@layout/shimmer_person"
                    android:layout_below="@id/header"
                    app:loading="@{vm.loading}"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>

        </RelativeLayout>

    </ScrollView>

</layout>