<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.main.HomeFragment">

    <data>
        <variable
                name="vm"
                type="com.themovie.tmdb.ui.main.HomeViewModel" />
        <import type="android.view.View"/>
        <import type="androidx.recyclerview.widget.RecyclerView"/>
    </data>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark">

        <com.themovie.tmdb.helper.customview.HeaderView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/header">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <include
                        android:id="@+id/shimmer_home"
                        layout="@layout/shimmer_content_main"
                        app:loading="@{vm.loading}"/>

                <LinearLayout
                        android:id="@+id/home_layout"
                        android:visibility="@{vm.loading ? View.GONE : View.VISIBLE}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorWhite"
                            android:text="@string/home_title_1"
                            android:textStyle="bold"
                            android:layout_marginStart="@dimen/medium_space"
                            android:layout_marginEnd="@dimen/medium_space"
                            android:layout_marginTop="@dimen/extra_medium_space"
                            android:textSize="20sp"/>

                    <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/home_popular"
                            android:layout_width="match_parent"
                            android:layout_height="190dp"
                            android:layout_marginTop="@dimen/small_space"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:setItemSpacing="@{@dimen/small_space}"
                            app:firstItemSpacing="@{true}"
                            app:setOrientation="@{RecyclerView.HORIZONTAL}">

                    </androidx.recyclerview.widget.RecyclerView>

                    <me.relex.circleindicator.CircleIndicator2
                            android:id="@+id/indicator"
                            android:layout_marginTop="@dimen/extra_small_space"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            app:ci_drawable="@drawable/selected_indicator"
                            app:ci_drawable_unselected="@drawable/unselected_indicator"
                            app:ci_gravity="start"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/medium_space"
                            android:paddingTop="@dimen/medium_space"
                            android:paddingBottom="@dimen/medium_space"
                            android:layout_marginBottom="@dimen/medium_space"
                            android:background="@color/colorPrimary">

                        <TextView
                                android:id="@+id/title_upcoming"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:textSize="18sp"
                                android:text="@string/title_main_2"
                                android:textColor="@color/colorWhite"
                                android:layout_marginStart="@dimen/medium_space"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"/>

                        <TextView
                                android:id="@+id/see_upcoming"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/title_main_5"
                                android:textAlignment="textEnd"
                                android:textColor="@color/colorAccent"
                                android:textStyle="bold"
                                android:layout_marginEnd="@dimen/medium_space"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent"/>

                        <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/home_upcoming"
                                android:layout_marginTop="@dimen/small_space"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                                app:setItemSpacing="@{@dimen/extra_small_space}"
                                app:firstItemSpacing="@{true}"
                                app:setOrientation="@{RecyclerView.HORIZONTAL}"
                                app:layout_constraintTop_toBottomOf="@id/title_upcoming">

                        </androidx.recyclerview.widget.RecyclerView>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorPrimary"
                            android:paddingTop="@dimen/medium_space"
                            android:paddingBottom="@dimen/medium_space"
                            android:layout_marginBottom="@dimen/medium_space">

                        <TextView
                                android:id="@+id/title_genre"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:textSize="18sp"
                                android:text="@string/home_title_3"
                                android:textColor="@color/colorWhite"
                                android:layout_marginStart="@dimen/medium_space"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintStart_toStartOf="parent"/>

                        <TextView
                                android:id="@+id/see_genre"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/title_main_5"
                                android:textAlignment="textEnd"
                                android:textColor="@color/colorAccent"
                                android:textStyle="bold"
                                android:layout_marginEnd="@dimen/medium_space"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"/>

                        <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/home_genre"
                                android:layout_marginTop="@dimen/small_space"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/small_space"
                                android:layout_marginEnd="@dimen/small_space"
                                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                                app:spanCount="2"
                                app:gridSize="@{2}"
                                app:layout_constraintTop_toBottomOf="@id/title_genre">

                        </androidx.recyclerview.widget.RecyclerView>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/medium_space"
                            android:layout_marginTop="@dimen/small_space"
                            android:paddingTop="@dimen/medium_space"
                            android:paddingBottom="@dimen/medium_space"
                            android:background="@color/colorPrimary">

                        <TextView
                                android:id="@+id/title_discover_tv"
                                android:layout_width="wrap_content"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:textSize="18sp"
                                android:text="@string/home_title_4"
                                android:textColor="@color/colorWhite"
                                android:layout_marginStart="@dimen/medium_space"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintStart_toStartOf="parent"/>

                        <TextView
                                android:id="@+id/see_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="end"
                                android:text="@string/title_main_5"
                                android:textAlignment="textEnd"
                                android:textColor="@color/colorAccent"
                                android:textStyle="bold"
                                android:layout_marginEnd="@dimen/medium_space"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"/>

                            <androidx.recyclerview.widget.RecyclerView
                                    android:id="@+id/home_tv"
                                    android:layout_marginTop="@dimen/small_space"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                                    app:setItemSpacing="@{@dimen/extra_small_space}"
                                    app:firstItemSpacing="@{true}"
                                    app:setOrientation="@{RecyclerView.HORIZONTAL}"
                                    app:layout_constraintTop_toBottomOf="@id/title_discover_tv">

                            </androidx.recyclerview.widget.RecyclerView>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/medium_space"
                            android:paddingBottom="@dimen/medium_space"
                            android:background="@color/colorPrimary">

                        <TextView
                                android:id="@+id/title_discover_movie"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:textSize="18sp"
                                android:text="@string/home_title_5"
                                android:textColor="@color/colorWhite"
                                android:layout_marginStart="@dimen/medium_space"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"/>

                        <TextView
                                android:id="@+id/see_movies"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="end"
                                android:text="@string/title_main_5"
                                android:textAlignment="textEnd"
                                android:textColor="@color/colorAccent"
                                android:textStyle="bold"
                                android:layout_marginEnd="@dimen/medium_space"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"/>

                        <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/home_movies"
                                android:layout_marginTop="@dimen/small_space"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                                app:setItemSpacing="@{@dimen/extra_small_space}"
                                app:firstItemSpacing="@{true}"
                                app:setOrientation="@{RecyclerView.HORIZONTAL}"
                                app:layout_constraintTop_toBottomOf="@id/title_discover_movie">

                        </androidx.recyclerview.widget.RecyclerView>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</layout>
